--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,7 +5,9 @@ documents those changes that are of interest to users and admins.
 =============================
  -- If a job and node are in COMPLETING state and slurmd stops responding for
     SlurmdTimeout, then set the node DOWN and the job COMPLETED.
- 
+ -- Add logic to switch/elan to track contexts allocated to active job steps 
+    rather than just using a cyclic counter and hoping to avoid collisions. 
+
 * Changes in SLURM 0.5.0-pre8
 =============================
  -- BlueGene srun --geometry was not getting propogated properly.
