Fix memory leak in freeing job info gathered using API.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
     SlurmdTimeout, then set the node DOWN and the job COMPLETED.
  -- Add logic to switch/elan to track contexts allocated to active job steps 
     rather than just using a cyclic counter and hoping to avoid collisions. 
+ -- Plug memory leak in freeing job info retrieved using API.
 
 * Changes in SLURM 0.5.0-pre8
 =============================
